refactor: update docs
